Make validation rule and message extraction way more sophisticated

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
       "@rector"
     ],
     "test": [
-      "@php artisan package:test --parallel"
+      "@php artisan package:test"
     ]
   },
   "config": {
