--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 /.junie export-ignore
 /.claude export-ignore
 /tests export-ignore
+/workbench export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .mcp.json export-ignore
