--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,13 +1,13 @@
 parameters:
 	ignoreErrors:
 		-
-			message: '#^Parameter \#1 \$view of function view expects view\-string\|null, string given\.$#'
-			identifier: argument.type
-			count: 1
-			path: src/Http/ApiDocsController.php
-
-		-
 			message: '#^Property OpenApi\\Annotations\\Schema\:\:\$properties \(array\<OpenApi\\Annotations\\Property\>\) does not accept string\.$#'
 			identifier: assign.propertyType
 			count: 1
 			path: src/OpenApi/PostProcessors/PaginationResponseProcessor.php
+
+		-
+			message: '#^Call to an undefined static method UnitEnum\:\:getActiveCases\(\)\.$#'
+			identifier: staticMethod.notFound
+			count: 2
+			path: src/OpenApi/Processors/ExpandEnumsWithInactiveSupport.php
