--- a/composer.json
+++ b/composer.json
@@ -1,85 +1,88 @@
 {
-  "name": "xentral/laravel-api",
-  "description": "A laravel package which provides a smooth OAS workflow",
-  "keywords": [
-    "xentral",
-    "laravel",
-    "api"
-  ],
-  "homepage": "https://github.com/xentral/laravel-api",
-  "license": "MIT",
-  "type": "library",
-  "authors": [
-    {
-      "name": "Manuel Christlieb",
-      "email": "manuel@christlieb.eu"
-    }
-  ],
-  "require": {
-    "php": "^8.2",
-    "illuminate/console": "^10.0|^11.0|^12.0",
-    "illuminate/http": "^10.0|^11.0|^12.0",
-    "illuminate/support": "^10.0|^11.0|^12.0",
-    "illuminate/validation": "^10.0|^11.0|^12.0",
-    "spatie/laravel-data": "^4.17",
-    "spatie/laravel-query-builder": "^6.3",
-    "swagger-api/swagger-ui": "^5.21",
-    "zircote/swagger-php": "^5.3"
-  },
-  "require-dev": {
-    "larastan/larastan": "^3.5",
-    "laravel/boost": "^1.0",
-    "laravel/pint": "^1.8",
-    "orchestra/testbench": "^9.14",
-    "pestphp/pest": "^3.7",
-    "phpunit/phpunit": "^11.5",
-    "xentral/laravel-testing": "^0.3.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Xentral\\LaravelApi\\": "src"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Xentral\\LaravelApi\\Tests\\": "tests",
-      "Workbench\\App\\": "workbench/app/",
-      "Workbench\\Database\\Factories\\": "workbench/database/factories/",
-      "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
-    }
-  },
-  "scripts": {
-    "pint": "vendor/bin/pint",
-    "pest": "vendor/bin/pest",
-    "test:coverage": "vendor/bin/pest --coverage-html coverage",
-    "test:ci": "vendor/bin/pest --coverage-clover coverage.xml",
-    "phpstan:analyse": "vendor/bin/phpstan analyse --ansi --memory-limit=4G",
-    "phpstan:baseline": "vendor/bin/phpstan analyse --generate-baseline --memory-limit=4G",
-    "rector": "vendor/bin/rector",
-    "lint": [
-      "@pint",
-      "@rector"
+    "name": "xentral/laravel-api",
+    "description": "A laravel package which provides a smooth OAS workflow",
+    "keywords": [
+        "xentral",
+        "laravel",
+        "api"
     ],
-    "test": [
-      "@php artisan package:test"
+    "homepage": "https://github.com/xentral/laravel-api",
+    "license": "MIT",
+    "type": "library",
+    "authors": [
+        {
+            "name": "Manuel Christlieb",
+            "email": "manuel@christlieb.eu"
+        }
     ],
-    "all": [
-      "@lint",
-      "@pest",
-      "@phpstan:analyse"
-    ]
-  },
-  "config": {
-    "sort-packages": true,
-    "allow-plugins": {
-      "pestphp/pest-plugin": true
+    "require": {
+        "php": "^8.2",
+        "illuminate/console": "^10.0|^11.0|^12.0",
+        "illuminate/http": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/validation": "^10.0|^11.0|^12.0",
+        "spatie/laravel-data": "^4.17",
+        "spatie/laravel-query-builder": "^6.3",
+        "swagger-api/swagger-ui": "^5.21",
+        "zircote/swagger-php": "^5.3"
+    },
+    "require-dev": {
+        "larastan/larastan": "^3.5",
+        "laravel/boost": "^1.0",
+        "laravel/pint": "^1.8",
+        "orchestra/testbench": "^9.14",
+        "pestphp/pest": "^3.7",
+        "phpunit/phpunit": "^11.5",
+        "xentral/laravel-testing": "^0.3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Xentral\\LaravelApi\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Xentral\\LaravelApi\\Tests\\": "tests",
+            "Workbench\\App\\": "workbench/app/",
+            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
+        }
+    },
+    "scripts": {
+        "post-update-cmd": [
+            "@php artisan boost:update --ansi"
+        ],
+        "pint": "vendor/bin/pint",
+        "pest": "vendor/bin/pest",
+        "test:coverage": "vendor/bin/pest --coverage-html coverage",
+        "test:ci": "vendor/bin/pest --coverage-clover coverage.xml",
+        "phpstan:analyse": "vendor/bin/phpstan analyse --ansi --memory-limit=4G",
+        "phpstan:baseline": "vendor/bin/phpstan analyse --generate-baseline --memory-limit=4G",
+        "rector": "vendor/bin/rector",
+        "lint": [
+            "@pint",
+            "@rector"
+        ],
+        "test": [
+            "@php artisan package:test"
+        ],
+        "all": [
+            "@lint",
+            "@pest",
+            "@phpstan:analyse"
+        ]
+    },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Xentral\\LaravelApi\\ApiServiceProvider"
+            ]
+        }
     }
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Xentral\\LaravelApi\\ApiServiceProvider"
-      ]
-    }
-  }
 }
