--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -11,3 +11,9 @@ parameters:
 			identifier: assign.propertyType
 			count: 1
 			path: src/OpenApi/PostProcessors/PaginationResponseProcessor.php
+
+		-
+			message: '#^Parameter \#1 \$keys of method Illuminate\\Support\\Collection\<int,string\>\:\:except\(\) expects array\<int\>\|Illuminate\\Support\\Enumerable\<\(int\|string\), int\>\|string, int\<\-1, max\> given\.$#'
+			identifier: argument.type
+			count: 1
+			path: src/Query/Filters/StringOperatorFilter.php
